--- a/app/views/individualserviceawards/_contributiontocsiindserviceaward_fields.html.erb
+++ b/app/views/individualserviceawards/_contributiontocsiindserviceaward_fields.html.erb
@@ -4,15 +4,15 @@
 
 <div class="form-group sf col-md-2">
         <!--make drop down-->
-        <%= f.text_field :year , class: "form-control"%>
+        <%= f.text_field :year , required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-4">
        
-        <%= f.text_field :name_of_position , class: "form-control"%>
+        <%= f.text_field :name_of_position, required: true  , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-5">
        
-        <%= f.text_area :achievement , class: "form-control"%>
+        <%= f.text_field :achievement , required: true , class: "form-control"%>
 </div>
 
 
