--- a/app/views/bestaccreditedstudentbranches/_form.html.erb
+++ b/app/views/bestaccreditedstudentbranches/_form.html.erb
@@ -2,48 +2,65 @@
 <%= render 'shared/errors', object: @bestaccreditedstudentbranch %>
 
 <%= form_for @bestaccreditedstudentbranch, :html => {:class => "form-horizontal"} do |f| %>
-    
+<p class="form-detail">(Awarded to the branch for ‘Best Performance’  during 01/07/2015 to 30/06/2016)</p>    
      
     <div class="primary-form">
     <div class="row institution-details">
       <!--institution details-->
-    <p class="primary-form-subheading">Institution Details</p>  
+    <p class="primary-form-subheading">Institution Details</p>
+    
     <div class="form-group col-md-6">
-     <%= f.fields_for :institute, @institute do |institute| %>
-      <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , 
-      placeholder: "Enter your institution name" ,title: "Enter your Institution name",  required: true , class: "form-control" %>
-     <% end %>    
+     <label>Institution Name</label>
+     <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
     <div class="form-group col-md-6">
       <label>Postal Address</label>
-      <input type="text" class="form-control" id="address"> 
+      <input type="text" class="form-control" id="address" value="
+      <% unless current_sbc_user_data.institute.address.nil? %>
+      <%= current_sbc_user_data.institute.address %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-1">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , required: true ,class: "form-control" , id:"imno"%>
+      <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
+      required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     <div class="form-group col-md-1">
       <label>Validity</label>
-      <input type="text" class="form-control" id="validity"> 
+      <input type="text" class="form-control" id="validity" value="<%= current_sbc_user_data.institute.validity %>" disabled> 
     </div>
     
     
     <div class="form-group col-md-3">
       <label>District</label>
-      <input type="text" class="form-control" id="district"> 
+      <input type="text" class="form-control" id="district"  value="
+      <% unless current_sbc_user_data.institute.district.nil? %>
+      <%= current_sbc_user_data.institute.district %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>City</label>
-      <input type="text" class="form-control" id="city"> 
+      <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>Pin</label>
-      <input type="text" class="form-control" id="pin"> 
+      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>State</label>
-      <input type="text" class="form-control" id="state"> 
+      <input type="text" class="form-control" id="state"  value="
+      <% unless current_sbc_user_data.institute.state.nil? %>
+      <%= current_sbc_user_data.institute.state %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     
     
@@ -53,20 +70,26 @@
     <div class="sbc-details">
     <div class="form-group col-md-2">
       <label>Name</label>
-      <input type="text" class="form-control" id="sbc-name"> 
+      <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
     <div class="form-group col-md-2">
       <label>Mem.No</label>
-      <input type="text" class="form-control" id="sbc-imno"> 
+      <input type="text" class="form-control" id="sbc-imno"  value="
+      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
+      <%= current_sbc_user_data.sbc_membership_no %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Email</label>
-      <input type="email" class="form-control" id="sbc-email"> 
+      <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone"> 
+      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
     </div>
    </div>
   
@@ -75,18 +98,20 @@
     <!--should include in the sbc table and make it display  -->
     <div class="form-group col-md-1">
       <label>Volunteers</label>
-      <input type="text" class="form-control" id="volunteers"> 
+      <input type="text" class="form-control" id="volunteers" value="<%= current_sbc_user_data.no_of_volunteers %>"
+      title="Number of CSI Volunteers as on 30th  June  2017" disabled> 
     </div>
     <div class="form-group col-md-1">
-      <%= f.label :volunteers_added , "Added" %>
-      <%= f.text_field :volunteers_added  , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
+      <%= f.label :volunteers_added  , "Added" %>
+      <%= f.text_field :volunteers_added , required: true , type: "number",
+      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
     </div>
     </div>
      <!--form specific details-->
+     <br></br>
     <div class="row">
         
-    <div class="col-md-6">
+    <div class="col-md-6 accredited-subform">
     <p class="primary-form-subheading">Details of different programs organised</p>
     
     <table class="table table-bordered table-hover table-condensed">
@@ -144,7 +169,7 @@
     </div>
     
     
-    <div class="col-md-6">  
+    <div class="col-md-6 accredited-subform">  
     <p class="primary-form-subheading">Student Branch Membership</p>
     <div class="form-group col-md-8">
       <%= f.label :student_branch_membership_institution_category , "Institution Category" %>
@@ -192,10 +217,10 @@
    
     </div>
     </div>
-    
+     <br>
     
     <div class="row">
-    <div class="col-md-6">   
+    <div class="col-md-6 accredited-subform">   
     <p class="primary-form-subheading">No. of Faculties as CSI memebers</p>
     
     
@@ -239,7 +264,7 @@
     
     </div>
     
-    <div class="col-md-6">
+    <div class="col-md-6 accredited-subform">
     <p class="primary-form-subheading">Website for Student Branch</p>
     
     <div class="form-group col-md-12">
