--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -2,56 +2,74 @@
 <%= render 'shared/errors', object: @bestcsiinternationalstudentseventhost %>
 
 <%= form_for @bestcsiinternationalstudentseventhost, :html => {:class => "form-horizontal"} do |f| %>
-    
+<p class="form-detail">(Awarded to the institutional members which hosted maximum number of CSI sponsored students’ 
+software competition participated by a minimum of 10 students from abroad 01/07/2015 to 30/06/2016)</p>      
      
     <div class="primary-form">
     <div class="row institution-details">
       <!--institution details-->
     <p class="primary-form-subheading">Institution Details</p>  
     <div class="form-group col-md-6">
-     <%= f.fields_for :institute, @institute do |institute| %>
-      <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name", 
-      placeholder: "Enter your institution name" , required: true , class: "form-control" %>
-     <% end %>    
+     <label>Institution Name</label>
+     <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
     <div class="form-group col-md-6">
       <label>Postal Address</label>
-      <input type="text" class="form-control" id="address"> 
+      <input type="text" class="form-control" id="address" value="
+      <% unless current_sbc_user_data.institute.address.nil? %>
+      <%= current_sbc_user_data.institute.address %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
-    <div class="form-group col-md-1">
+   <div class="form-group col-md-2">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , required: true , class: "form-control" , id:"imno"%>
+      <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
+      required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     <div class="form-group col-md-1">
       <label>Validity</label>
-      <input type="text" class="form-control" id="validity"> 
+      <input type="text" class="form-control" id="validity" value="<%= current_sbc_user_data.institute.validity %>" disabled> 
     </div>
-    <div class="form-group col-md-1">
-      <label>join_date</label>
-      <input type="text" class="form-control" id="join_date"> 
-    </div>
-    <div class="form-group col-md-1">
-      <label>valid_till</label>
-      <input type="text" class="form-control" id="valid_till"> 
-    </div>
-    
     
     <div class="form-group col-md-2">
+      <label>Valid Till</label>
+      <input type="text" class="form-control" id="valid_till"  value="
+      <% unless current_sbc_user_data.institute.valid_till.nil? %>
+      <%= current_sbc_user_data.institute.valid_till %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled>  
+    </div>
+    <div class="form-group col-md-2">
       <label>District</label>
-      <input type="text" class="form-control" id="district"> 
+      <input type="text" class="form-control" id="district"  value="
+      <% unless current_sbc_user_data.institute.district.nil? %>
+      <%= current_sbc_user_data.institute.district %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>City</label>
-      <input type="text" class="form-control" id="city"> 
+      <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <label>Pin</label>
-      <input type="text" class="form-control" id="pin"> 
+      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>State</label>
-      <input type="text" class="form-control" id="state"> 
+      <input type="text" class="form-control" id="state"  value="
+      <% unless current_sbc_user_data.institute.state.nil? %>
+      <%= current_sbc_user_data.institute.state %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     
     
@@ -59,22 +77,28 @@
     <!--sbc details-->
     <p class="primary-form-subheading">SBC Details</p>    
     <div class="sbc-details">
-    <div class="form-group col-md-2">
+        <div class="form-group col-md-2">
       <label>Name</label>
-      <input type="text" class="form-control" id="sbc-name"> 
+      <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
     <div class="form-group col-md-2">
       <label>Mem.No</label>
-      <input type="text" class="form-control" id="sbc-imno"> 
+      <input type="text" class="form-control" id="sbc-imno"  value="
+      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
+      <%= current_sbc_user_data.sbc_membership_no %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Email</label>
-      <input type="email" class="form-control" id="sbc-email"> 
+      <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone"> 
+      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
     </div>
    </div>
     
@@ -84,12 +108,13 @@
       
     <div class="form-group col-md-1">
       <label>Volunteers</label>
-      <input type="text" class="form-control" id="volunteers"> 
+      <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017" 
+      value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
     </div>
     <div class="form-group col-md-1">
-      <%= f.label :volunteers_added , "Added"  %>
-      <%= f.text_field :volunteers_added  , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3" , class: "form-control" %>
+      <%= f.label :volunteers_added  , "Added" %>
+      <%= f.text_field :volunteers_added , required: true , type: "number",
+      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
     </div>
     </div>
     </div>
@@ -101,9 +126,10 @@
     
     <br>
     <div class="row">
-      <div class="col-md-4"><p class="subform-head"><strong>CSI organised Event / Competition name</strong></p></div>
+      <div class="col-md-3"><p class="subform-head"><strong>CSI organised Event / Competition name</strong></p></div>
       <div class="col-md-3"><p  class="subform-head"><strong>Date of event</strong></p></div>
-      <div class="col-md-5"><p><strong>No. of students participated from abroad with Country name</strong></p></div>
+      <div class="col-md-3"><p><strong>Students participated from abroad</strong></p></div>
+      <div class="col-md-3"><p><strong>Country Name</strong></p></div>
       
       
     </div>
