--- a/app/views/highestsponsorshipofcsievents/_form.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_form.html.erb
@@ -1,72 +1,99 @@
 <%= render 'shared/errors', object: @highestsponsorshipofcsievent %>
 
 <%= form_for @highestsponsorshipofcsievent, :html => {:class => "form-horizontal"} do |f| %>
-    
+<p class="form-detail">(Awarded to the institutional members that extended maximum support for CSI organised events 
+during 01/07/2015 to 30/06/2016) 
+
+</p>      
     
     <div class="row">
       <p class="primary-form-subheading">Institution Details</p>  
     <div class="form-group col-md-6">
-     <%= f.fields_for :institute, @institute do |institute| %>
-      <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name", 
-      placeholder: "Enter your institution name" ,title: "Enter your Institution name",  required: true , class: "form-control" %>
-     <% end %>  
+     <label>Institution Name</label>
+     <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
-    <div class="form-group col-md-6">
+   <div class="form-group col-md-6">
       <label>Postal Address</label>
-      <input type="text" class="form-control" id="address"> 
+      <input type="text" class="form-control" id="address" value="
+      <% unless current_sbc_user_data.institute.address.nil? %>
+      <%= current_sbc_user_data.institute.address %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
-    <div class="form-group col-md-1">
+    <div class="form-group col-md-2">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , required: true, class: "form-control" , id:"imno"%>
+      <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
+      required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     <div class="form-group col-md-1">
       <label>Validity</label>
-      <input type="text" class="form-control" id="validity"> 
+      <input type="text" class="form-control" id="validity" value="<%= current_sbc_user_data.institute.validity %>" disabled> 
     </div>
-    <div class="form-group col-md-1">
-      <label>join_date</label>
-      <input type="text" class="form-control" id="join_date"> 
-    </div>
-    <div class="form-group col-md-1">
-      <label>valid_till</label>
-      <input type="text" class="form-control" id="valid_till"> 
+    
+    <div class="form-group col-md-2">
+      <label>Valid Till</label>
+      <input type="text" class="form-control" id="valid_till" value="
+      <% unless current_sbc_user_data.institute.valid_till.nil? %>
+      <%= current_sbc_user_data.institute.valid_till %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled>  
     </div>
     <div class="form-group col-md-2">
       <label>District</label>
-      <input type="text" class="form-control" id="district"> 
+      <input type="text" class="form-control" id="district"  value="
+      <% unless current_sbc_user_data.institute.district.nil? %>
+      <%= current_sbc_user_data.institute.district %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>City</label>
-      <input type="text" class="form-control" id="city"> 
+      <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <label>Pin</label>
-      <input type="text" class="form-control" id="pin"> 
+      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>State</label>
-      <input type="text" class="form-control" id="state"> 
+      <input type="text" class="form-control" id="state"  value="
+      <% unless current_sbc_user_data.institute.state.nil? %>
+      <%= current_sbc_user_data.institute.state %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     
-    
     <p class="primary-form-subheading">SBC Details</p>
-    <div class="form-group col-md-2">
+        <div class="form-group col-md-2">
       <label>Name</label>
-      <input type="text" class="form-control" id="sbc-name"> 
+      <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
     <div class="form-group col-md-2">
       <label>Mem.No</label>
-      <input type="text" class="form-control" id="sbc-imno"> 
+      <input type="text" class="form-control" id="sbc-imno"  value="
+      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
+      <%= current_sbc_user_data.sbc_membership_no %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Email</label>
-      <input type="email" class="form-control" id="sbc-email"> 
+      <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone"> 
+      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
     </div>
    
     
@@ -74,12 +101,13 @@
       
     <div class="form-group col-md-1">
       <label>Volunteers</label>
-      <input type="text" class="form-control" id="volunteers"> 
+      <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017"
+      value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
     </div>
     <div class="form-group col-md-1">
-      <%= f.label :volunteers_added , "Added" %>
+      <%= f.label :volunteers_added  , "Added" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
+      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
     </div>
     
     </div>
@@ -89,7 +117,7 @@
     
     
     <p class="primary-form-subheading">Details of support extended for CSI event
-    organised by CSI Chapters / Divisions / SIGs (Do not include College organised events): </p>
+    organised by CSI Chapters / Divisions / SIGs <small>(Do not include College organised events)</small>: </p>
     
     <br></br>
     <div class="row">
@@ -99,7 +127,7 @@
       <div class="col-md-2"><p class="subform-head"><strong>Date of the Event</strong></p></div>
       <div class="col-md-3"><p class="subform-head"><strong>Organised By</strong></p></div>
       <div class="col-md-2"><p class="subform-head"><strong>Support Details</strong></p></div>
-      <div class="col-md-2"><p ><strong>Monetary Value</strong></p></div>
+      <div class="col-md-2"><p ><strong>Monetary Value (INR)</strong></p></div>
     </div>
     
 
