--- a/app/views/highestsponsorshipofcsievents/_supportforcsievent_fields.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_supportforcsievent_fields.html.erb
@@ -20,7 +20,8 @@
 </div>
 <div class="form-group sf col-md-2">
         
-        <%= f.text_field :monetary_value ,  required: true , class: "form-control"%>
+        <%= f.text_field :monetary_value ,  type: "number",
+      min: "0" ,max: "100000", maxlength: "6", required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-1 remove-sub-form-button">
    <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
