--- a/app/views/individualserviceawards/_roleincsieventindserviceaward_fields.html.erb
+++ b/app/views/individualserviceawards/_roleincsieventindserviceaward_fields.html.erb
@@ -4,11 +4,11 @@
 
 <div class="form-group sf col-md-2">
         
-        <%= f.date_field :date_of_event , class: "form-control"%>
+        <%= f.date_field :date_of_event, required: true  , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
        
-        <%= f.text_field :name_of_event , class: "form-control"%>
+        <%= f.text_field :name_of_event , required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
       
@@ -19,15 +19,16 @@
 </div>
 <div class="form-group sf col-md-2">
        
-        <%= f.text_field :surplus_amount , class: "form-control"%>
+        <%= f.text_field :surplus_amount , required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
         
-        <%= f.text_field :role , class: "form-control"%>
+        <%= f.text_field :role , required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-1">
        
-        <%= f.text_field :no_of_paper_received , class: "form-control"%>
+        <%= f.text_field :no_of_paper_received , type: "number",
+      min: "0" ,max: "1000", maxlength: "4" , required: true , class: "form-control"%>
 </div>
 
 <div class="form-group sf col-md-1 remove-sub-form-button">
