--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -2,64 +2,94 @@
 <%= render 'shared/errors', object: @longestcontinuoussbc %>
 
 <%= form_for @longestcontinuoussbc, :html => {:class => "form-horizontal"} do |f| %>
-    
+<p class="form-detail">(Awarded to the Student Branch Counsellor with longest continuous tenure at one or more colleges as SBC
+over the past 3 years)
+</p>      
     <div class="row">
     <p class="primary-form-subheading">Institution Details</p> 
     <div class="form-group col-md-6">
-     <%= f.fields_for :institute, @institute do |institute| %>
-      <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , 
-      placeholder: "Enter your institution name" ,title: "Enter your Institution name",  required: true , class: "form-control" %>
-     <% end %>  
+     <label>Institution Name</label>
+     <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
     <div class="form-group col-md-6">
       <label>Postal Address</label>
-      <input type="text" class="form-control" id="address"> 
+      <input type="text" class="form-control" id="address" value="
+      <% unless current_sbc_user_data.institute.address.nil? %>
+      <%= current_sbc_user_data.institute.address %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
-    <div class="form-group col-md-1">
+    <div class="form-group col-md-2">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , required: true ,class: "form-control" , id:"imno"%>
+      <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
+      required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
    
-    <div class="form-group col-md-1">
-      <label>valid_till</label>
-      <input type="text" class="form-control" id="valid_till"> 
+    <div class="form-group col-md-2">
+      <label>Valid Till</label>
+      <input type="text" class="form-control" id="valid_till" value="
+      <% unless current_sbc_user_data.institute.valid_till.nil? %>
+      <%= current_sbc_user_data.institute.valid_till %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled>   
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>District</label>
-      <input type="text" class="form-control" id="district"> 
+      <input type="text" class="form-control" id="district"  value="
+      <% unless current_sbc_user_data.institute.district.nil? %>
+      <%= current_sbc_user_data.institute.district %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>City</label>
-      <input type="text" class="form-control" id="city"> 
+      <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
     <div class="form-group col-md-2">
       <label>Pin</label>
-      <input type="text" class="form-control" id="pin"> 
+      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>State</label>
-      <input type="text" class="form-control" id="state"> 
+      <input type="text" class="form-control" id="state"  value="
+      <% unless current_sbc_user_data.institute.state.nil? %>
+      <%= current_sbc_user_data.institute.state %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
    
     
     <p class="primary-form-subheading">SBC Details</p> 
-    <div class="form-group col-md-2">
+        <div class="form-group col-md-2">
       <label>Name</label>
-      <input type="text" class="form-control" id="sbc-name"> 
+      <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
     <div class="form-group col-md-2">
-      <label>CSI Imno</label>
-      <input type="text" class="form-control" id="sbc-imno"> 
+      <label>Mem.No</label>
+      <input type="text" class="form-control" id="sbc-imno"  value="
+      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
+      <%= current_sbc_user_data.sbc_membership_no %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Email</label>
-      <input type="email" class="form-control" id="sbc-email"> 
+      <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone"> 
+      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
     </div>
     
     
@@ -67,13 +97,13 @@
       
     <div class="form-group col-md-1">
       <label>Volunteers</label>
-      <input type="text" class="form-control" id="volunteers"> 
+      <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017"
+      value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
     </div>
     <div class="form-group col-md-1">
-      <%= f.label :volunteers_added ,"Added" %>
+      <%= f.label :volunteers_added  , "Added" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
-    </div>
+      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
     </div>
     
     
@@ -81,23 +111,32 @@
     <p class="primary-form-subheading">SBC tenure details:</p>
     
     <br>
-    <div class="row">
-      <div class="col-md-3"><p class="subform-head"><strong>Year</strong></p></div>
-      <div class="col-md-3"><p  class="subform-head"><strong>Institution Name</strong></p></div>
-      <div class="col-md-3"><p><strong>Imno</strong></p></div>
-      <div class="col-md-2"><p><strong>No. of Volunteers</strong></p></div>
+    <div class="row container">
+      <table class="col-md-12">
+        <thead>
+          <tr>
+            <td><strong>No. of CSI Volunteers Added During 2014-15 -</strong></td>
+            <td><strong>No. of CSI Volunteers Added During 2016-17 -</strong></td>
+            <td><strong>No. of CSI Volunteers Added During 2016-17 -</strong></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td> <%= f.text_field :last_but_before_year_vol_strength , required: true , type: "number",
+      min: "0" ,max: "1000", maxlength: "4", class: "form-control" %></td>
+            <td> <%= f.text_field :last_year_vol_strength , required: true , type: "number",
+      min: "0" ,max: "1000", maxlength: "4", class: "form-control" %></td>
+            <td> <%= f.text_field :current_year_vol_strength , required: true , type: "number",
+      min: "0" ,max: "1000", maxlength: "4", class: "form-control" %></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     
 
-    <%= f.fields_for :sbc_tenure_details do |i| %>
-      <%= render 'sbc_tenure_detail_fields', f: i %>
-      
-    <% end %>
     
-    <div class="links col-md-12">
-      <br>
-        <%= link_to_add_association 'Add Event', f, :sbc_tenure_details , class: "form-button btn btn-primary" %>
-    </div>
+    
+  <br></br>
    
     
     
