--- a/app/views/regionalchapterawards/_form.html.erb
+++ b/app/views/regionalchapterawards/_form.html.erb
@@ -2,66 +2,155 @@
 <%= render 'shared/errors', object: @regionalchapteraward %>
 
 <%= form_for @regionalchapteraward, :html => {:class => "form-horizontal"} do |f| %>
-    
+   
      
    <div class="row">
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-8">
       <%= f.label :category  %>
       <%= f.select(:category, options_for_select([
           ['Best Regional Chapter Award (Category A)', 'Category A'], 
           ['Best Regional Chapter Award (Category B)', 'Category B'],
-          ['Best Regional Chapter Award (Category C)','Category C']]), {}, {class: "form-control"}) %>
+          ['Best Regional Chapter Award (Category C)','Category C']]), {}, {class: "form-control", autofocus: true}) %>
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <%= f.label :region  %>
-      <%= f.text_field :region  , class: "form-control"%>
+      <%= f.select(:region, options_for_select([
+          ['I', '1'], 
+          ['II', '2'],
+          ['III','3'], 
+          ['IV', '4'], 
+          ['V', '5'], 
+          ['VI', '6']]), {}, {class: "form-control"}) %>
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <%= f.label :chapter  %>
-      <%= f.text_field :chapter  , class: "form-control"%>
+     
+      <%= f.select(:chapter, options_for_select([
+        ['Ahmedabad ','Ahmedabad'],
+        ['Allahabad','Allahabad'],
+['Aurangabad','Aurangabad'],
+['Balasore','Balasore'],
+['Bangalore','Bangalore'],
+['Bhilai','Bhilai'],
+['Bhopal','Bhopal'],
+['Bhubaneswar','Bhubaneswar'],
+['Calicut','Calicut'],
+['Chandigarh','Chandigarh'],
+['Chennai','Chennai'],
+['Cochin','Cochin'],
+['Coimbatore','Coimbatore'],
+['Cuttack','Cuttack'],
+['Dehradun','Dehradun'],
+['Delhi','Delhi'],
+['Ghaziabad','Ghaziabad'],
+['Goa','Goa'],
+['Gurgaon','Gurgaon'],
+['Guwahati','Guwahati'],
+['Gwalior','Gwalior'],
+['Haridwar','Haridwar'],
+['Hosur','Hosur'],
+['Hyderabad','Hyderabad'],
+['Indore','Indore'],
+['Jabalpur','Jabalpur'],
+['Jaipur','Jaipur'],
+['Jammu & Kashmir','Jammu & Kashmir'],
+['Jhansi','Jhansi'],
+['Kanpur','Kanpur'],
+['Kanyakumari','Kanyakumari'],
+['Kolkata','Kolkata'],
+['Koneru','Koneru'],
+['Lucknow','Lucknow'],
+['Mathura','Mathura'],
+['Mhow','Mhow'],
+['Mumbai','Mumbai'],
+['Mysore','Mysore'],
+['Nagpur','Nagpur'],
+['Nashik','Nashik'],
+['New Guntur','New Guntur'],
+['Noida','Noida'],
+['Ongole','Ongole'],
+['Patna','Patna'],
+['Pondicherry','Pondicherry'],
+['Pune','Pune'],
+['Raipur','Raipur'],
+['Rajkot','Rajkot'],
+['Ranchi','Ranchi'],
+['Rourkela','Rourkela'],
+['Salem','Salem'],
+['Siliguri','Siliguri'],
+['Sivakasi','Sivakasi'],
+['Solapur','Solapur'],
+['Surat','Surat'],
+['Surat ','Surat '],
+['Thanjavur','Thanjavur'],
+['Tiruchirapalli','Tiruchirapalli'],
+['Trivandrum','Trivandrum'],
+['Udaipur','Udaipur'],
+['V.V.Nagar','V.V.Nagar'],
+['Vadodara','Vadodara'],
+['Varanasi','Varanasi'],
+['Vellore','Vellore'],
+['Vijayawada','Vijayawada'],
+['Visakhapatnam','Visakhapatnam'],
+['Visakhapatnam ','Visakhapatnam ']]), {}, {class: "form-control", autofocus: true}) %>
     </div>
-    <div class="form-group col-md-3">
+    <div>
+    <p class="primary-form-subheading">Chapter Office Contact details  </p>
+    <div class="form-group col-md-6">
       <%= f.label :address  %>
-      <%= f.text_area :address  , class: "form-control"%>
+      <%= f.text_field :address  , required: true , class: "form-control"%>
     </div>
     <div class="form-group col-md-3">
       <%= f.label :phone  %>
-      <%= f.text_field :phone  , class: "form-control"%>
+      <%= f.text_field :phone , required: true ,pattern: "/(7|8|9)\d{9}/" , class: "form-control"%>
     </div>
     <div class="form-group col-md-3">
       <%= f.label :email  %>
-      <%= f.email_field :email  , class: "form-control"%>
+      <%= f.email_field :email  , required: true , type: "email" , class: "form-control"%>
     </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_number_till_previous_year  %>
-      <%= f.text_field :members_number_till_previous_year  , class: "form-control"%>
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_percentage_till_previous_year  %>
-      <%= f.text_field :members_percentage_till_previous_year  , class: "form-control"%>
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_number_till_current_year  %>
-      <%= f.text_field :members_number_till_current_year  , class: "form-control"%>
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_percentage_till_current_year  %>
-      <%= f.text_field :members_percentage_till_current_year  , class: "form-control"%>
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :student_branch_number_previous_year  %>
-      <%= f.text_field :student_branch_number_previous_year  , class: "form-control"%>
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :student_branch_number_current_year  %>
-      <%= f.text_field :student_branch_number_current_year  , class: "form-control"%>
     </div>
     
+    <br></br>
+    <div class="col-md-8">
+       <p class="primary-form-subheading">Membership Count</p>
+    <div class="form-group col-md-3">
+      <%= f.label :members_number_till_previous_year , "Number Till 31-03-2015"  %>
+      <%= f.text_field :members_number_till_previous_year  , required: true , type: "number",
+      min: "0" ,max: "1000", maxlength: "4", class: "form-control"%>
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :members_percentage_till_previous_year , "% Till 31-03-2016" %>
+      <%= f.text_field :members_percentage_till_previous_year, required: true   , class: "form-control"%>
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :members_number_till_current_year, "Number Till 31-03-2015"  %>
+      <%= f.text_field :members_number_till_current_year , required: true , type: "number",
+      min: "0" ,max: "1000", maxlength: "4" , class: "form-control"%>
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :members_percentage_till_current_year, "% Till 31-03-2016"  %>
+      <%= f.text_field :members_percentage_till_current_year, required: true  , class: "form-control"%>
+    </div>
+    </div>
+    
+     <div class="col-md-4">
+        <p class="primary-form-subheading">Student Branches Count</p>
+    <div class="form-group col-md-6">
+      <%= f.label :student_branch_number_previous_year  , "As on 31-3-2015"  %>
+      <%= f.text_field :student_branch_number_previous_year , required: true , type: "number",
+      min: "0" ,max: "1000", maxlength: "4" , class: "form-control"%>
+    </div>
+    <div class="form-group col-md-6">
+      <%= f.label :student_branch_number_current_year  , "As on 31-3-2016" %>
+      <%= f.text_field :student_branch_number_current_year, required: true   , type: "number",
+      min: "0" ,max: "1000", maxlength: "4", class: "form-control"%>
+    </div>
+    </div>
    </div>
    
    
     <!--sub form details-->
-    
+    <br></br>
     <div>
     <p class="primary-form-subheading">Monthly Technical Activities </p>
     
@@ -136,18 +225,26 @@
     <div class="links col-md-12">
       <br>
         <%= link_to_add_association 'Add Event', f, :newslettersforregionalchapterawards , class: "form-button btn btn-primary" %>
+        <br></br>
     </div>
     </div>
     
     <!--end of sub forms-->
+    
     <div class="row">
-    <div class="form-group col-md-6">
-      <%= f.label :details_deputed_memeber  %>
+      <div class="col-md-8">
+    <p class="primary-form-subheading">Details of Deputed member for National Council & AGM </p>
+    <div class="form-group col-md-12">
+   
       <%= f.text_area :details_deputed_memeber  , class: "form-control"%>
     </div>
-    <div class="form-group col-md-6">
-      <%= f.label :other_info  %>
+    </div>
+    <div class="col-md-4">
+    <p class="primary-form-subheading">Other Relevant Information </p>
+    <div class="form-group col-md-12">
+  
       <%= f.text_area :other_info  , class: "form-control"%>
+    </div>
     </div>
     </div>
     
