--- a/app/views/regionalchapterawards/_techactivitiesregionalchapteraward_fields.html.erb
+++ b/app/views/regionalchapterawards/_techactivitiesregionalchapteraward_fields.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="form-group sf col-md-5">
        
-        <%= f.text_area :remarks , class: "form-control"%>
+        <%= f.text_field :remarks , class: "form-control"%>
 </div>
 
 <div class="form-group sf col-md-1 remove-sub-form-button">
