--- a/app/views/studentbranchactivists/_form.html.erb
+++ b/app/views/studentbranchactivists/_form.html.erb
@@ -2,58 +2,100 @@
 <%= render 'shared/errors', object: @studentbranchactivist %>
 
 <%= form_for @studentbranchactivist, :html => {:class => "form-horizontal"} do |f| %>
-    
+ <p class="form-detail">(Awarded to the CSI Volunteer who was most active at
+ CSI Student Branch during 01/07/2015 to 30/06/2016) </p>     
     <p class="primary-form-subheading">Institution Details</p> 
     <div class="row institution-details">
     <div class="form-group col-md-6">
-     <%= f.fields_for :institute, @institute do |institute| %>
-      <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name"  , 
-      placeholder: "Enter your institution name" ,title: "Enter your Institution name",  required: true, class: "form-control" %>
-     <% end %>   
+     <label>Institution Name</label>
+     <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
     <div class="form-group col-md-6">
       <label>Postal Address</label>
-      <input type="text" class="form-control" id="address"> 
+      <input type="text" class="form-control" id="address" value="
+      <% unless current_sbc_user_data.institute.address.nil? %>
+      <%= current_sbc_user_data.institute.address %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-2">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , class: "form-control" ,  required: true, id:"imno"%>
+      <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
+      required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     
-    <div class="form-group col-md-1">
-      <label>valid_till</label>
-      <input type="text" class="form-control" id="valid_till"> 
+    <div class="form-group col-md-2">
+      <label>Valid Till</label>
+      <input type="text" class="form-control" id="valid_till" value="
+      <% unless current_sbc_user_data.institute.valid_till.nil? %>
+      <%= current_sbc_user_data.institute.valid_till %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled>  
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>District</label>
-      <input type="text" class="form-control" id="district"> 
+      <input type="text" class="form-control" id="district"  value="
+      <% unless current_sbc_user_data.institute.district.nil? %>
+      <%= current_sbc_user_data.institute.district %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>City</label>
-      <input type="text" class="form-control" id="city"> 
+      <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Pin</label>
-      <input type="text" class="form-control" id="pin"> 
+      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>State</label>
-      <input type="text" class="form-control" id="state"> 
+      <input type="text" class="form-control" id="state"  value="
+      <% unless current_sbc_user_data.institute.state.nil? %>
+      <%= current_sbc_user_data.institute.state %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
+    
     
     <div class="form-group col-md-3">
       <label>Head of the Institution</label>
-      <input type="text" class="form-control" id="na"> 
+      <input type="text" class="form-control" id="na" value="
+      <% unless current_sbc_user_data.institute.nominating_authority.nil? %>
+      <%= current_sbc_user_data.institute.nominating_authority %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     
     <div class="form-group col-md-3">
       <label>Phone number</label>
-      <input type="text" class="form-control" id="na-phone"> 
+      <input type="text" class="form-control" id="na-phone" value="
+      <% unless current_sbc_user_data.institute.na_phone.nil? %>
+      <%= current_sbc_user_data.institute.na_phone %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Email</label>
-      <input type="email" class="form-control" id="na-email"> 
+      <input type="email" class="form-control" id="na-email" value="
+      <% unless current_sbc_user_data.institute.na_email.nil? %>
+      <%= current_sbc_user_data.institute.na_email %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     
     
@@ -61,22 +103,28 @@
     <!--sbc details-->
     <p class="primary-form-subheading">SBC Details</p>    
   
-    <div class="form-group col-md-3">
+   <div class="form-group col-md-3">
       <label>Name</label>
-      <input type="text" class="form-control" id="sbc-name"> 
+      <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
     <div class="form-group col-md-3">
       <label>Mem.No</label>
-      <input type="text" class="form-control" id="sbc-imno"> 
+      <input type="text" class="form-control" id="sbc-imno"  value="
+      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
+      <%= current_sbc_user_data.sbc_membership_no %>
+      <% else %>
+      <%= "Not available" %>
+      <% end %>
+      " disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Email</label>
-      <input type="email" class="form-control" id="sbc-email"> 
+      <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
     <div class="form-group col-md-3">
       <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone"> 
+      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
     </div>
     
     
@@ -104,12 +152,13 @@
     </div>
     <div class="form-group col-md-1">
       <label>Volunteers</label>
-      <input type="text" class="form-control" id="volunteers"> 
+      <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017" 
+      value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
     </div>
     <div class="form-group col-md-1">
       <%= f.label :volunteers_added  , "Added" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
+      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
     </div>
     
     
@@ -120,7 +169,7 @@
     <div class="row">
       <div class="col-md-3"><p class="subform-head"><strong>Event name</strong></p></div>
       <div class="col-md-3"><p  class="subform-head"><strong>Event held at which Place</strong></p></div>
-      <div class="col-md-6"><p><strong>Role played:Paper Presenter/Competitor/Speaker/Other(specify)& topic chosen</strong></p></div>
+      <div class="col-md-6"><p><strong>Role played</strong></p></div>
       
     </div>
 
