--- a/app/views/studentmaxpublishings/_publishingdetailbystudent_fields.html.erb
+++ b/app/views/studentmaxpublishings/_publishingdetailbystudent_fields.html.erb
@@ -3,22 +3,39 @@
 <div class="nested-fields">
     
 
-<div class="form-group sf col-md-2">
+<div class="form-group sf col-md-1">
         <!--verify this field-->
         <%= f.text_field :no_of_articles_published , required: true , type: "number",
       min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
 </div>
-<div class="form-group sf col-md-3">
+<div class="form-group sf col-md-4">
        
         <%= f.text_field :article_title ,  required: true, class: "form-control" %>
 </div>
-<div class="form-group sf col-md-3">
+<div class="form-group sf col-md-4">
         
-        <%= f.text_field :published_in,  required: true, class: "form-control" %>
+ 
+        <%= f.select(:published_in, options_for_select([
+          ['CSIC', 'CSIC'], 
+          ['Journal', 'Journal'],
+          ['Adhyayan','Adhyayan']]), {}, {class: "form-control"}) %>
 </div>
-<div class="form-group sf col-md-3">
+<div class="form-group sf col-md-2">
         
-        <%= f.date_field :date_of_publishing ,  required: true, class: "form-control" %>
+      
+        <%= f.select(:date_of_publishing, options_for_select([
+          ['January', 'January'], 
+          ['February', 'February'],
+          ['March', 'March'], 
+          ['April', 'April'],
+          ['May', 'May'], 
+          ['June', 'June'],
+          ['July', 'July'], 
+          ['August', 'August'],
+          ['September', 'September'], 
+          ['October', 'October'],
+          ['November', 'November'], 
+          ['December', 'December']]), {}, {class: "form-control"}) %>
 </div>
 
 
