--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,9 @@
-<h1 align="center" id="award-banner">THE COMPUTER SOCIETY OF INDIA</h1>
+<%= render "nav" %>
 
-
+<h1 align="center" id="award-banner"></h1>
 
 <div class="container">
-    <% if user_signed_in? %>
-        <li><%= link_to "Edit account" ,edit_user_registration_path %></li>
-        <li><%= link_to "Sign out" , destroy_user_session_path , method: :delete %></li>
-    <% else %>
-        <li><%= link_to "Login" , user_session_path %></li>
-    <% end %>
+
 <div class="row">    
 <div class="col-md-5 award-area"> 
 <h3 class="award-head"align="center">ACADEMIC AWARDS</h3>
@@ -16,28 +11,25 @@
 <div class="award-title">
     <p><%= link_to "Best Accredited Student Branch Award" , new_bestaccreditedstudentbranch_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in? && is_sbc? %>
+
 <div class="award-title">
     <p><%= link_to "Best CSI International Students Event Host Award" , new_bestcsiinternationalstudentseventhost_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in? && is_sbc? %>
+
 <div class="award-title">
     <p><%= link_to "Highest Sponsorship of CSI Event Award" , new_highestsponsorshipofcsievent_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in? && is_sbc? %>
+
 <div class="award-title">
     <p><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </p>
 </div>
+
+
 <% end %>
 <% if user_signed_in?  %>
 <div class="award-title">
     <p><%= link_to "Faculty with maximum publishing  in CSI Publications" ,new_facmaxpublishing_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in?  %>
 <div class="award-title">
     <p><%= link_to "Paper Presenter at International Conference for Faculty" ,new_paperpresenter_path %> </p>
 </div>
@@ -46,8 +38,7 @@
 <div class="award-title">
     <p><%= link_to "Students with maximum publishing – CSI publications" ,new_studentmaxpublishing_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in? && is_sbc? %>
+
 <div class="award-title">
     <p><%= link_to "Highest Committed Student Branch Activist Award" ,new_studentbranchactivist_path %> </p>
 </div>
@@ -65,13 +56,11 @@
 <div class="award-title">
     <p><%= link_to "Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in?  %>
+
 <div class="award-title">
     <p><%= link_to "Best Service Awards (Individual)" , new_individualserviceaward_path %> </p>
 </div>
-<% end %>
-<% if user_signed_in?  %>
+
 <div class="award-title">
     <p><%= link_to "Best Chapter Newsletter Award" , new_newsletteraward_path %> </p>
 </div>
